add content and translations

--- a/lang/en.json
+++ b/lang/en.json
@@ -19,5 +19,282 @@
     "verifyCode": "Verify code sent by whatsapp",
     "magicLinkInstructions": "No password is required.\n\nWe will send you a code to login by whatsapp.",
     "messageContent": "Your login code is:"
+  },
+  "and": "&",
+  "birthDate": "Date of birth",
+  "uploadFrontId": "Upload ID front",
+  "uploadBackId": "Upload ID back",
+  "uploadSelfie": "Upload selfie",
+  "idFrontInput": "ID front",
+  "idBackInput": "ID back",
+  "selfieInput": "Selfie",
+  "birthDate1": "Date of birth first girl",
+  "uploadFrontId1": "Upload ID front first girl",
+  "uploadBackId1": "Upload ID back first girl",
+  "uploadSelfie1": "Upload selfie first girl",
+  "idFrontInput1": "ID front first girl",
+  "idBackInput1": "ID back first girl",
+  "selfieInput1": "Selfie first girl",
+  "birthDate2": "Date of birth second girl",
+  "uploadFrontId2": "Upload ID front second girl",
+  "uploadBackId2": "Upload ID back second girl",
+  "uploadSelfie2": "Upload selfie second girl",
+  "idFrontInput2": "ID front second girl",
+  "idBackInput2": "ID back second girl",
+  "selfieInput2": "Selfie second girl",
+  "head": "Title",
+  "headPlaceholder": "Write your title here",
+  "description": "Description",
+  "descriptionPlaceholder": "Write your description here. You can add emoji using the icon on the right.",
+  "descriptionFreeWorning": "To get a free lifetime advertisement you still miss {missingWords} words.",
+  "publicationDelated": "Your advertisement has been deleted. It now needs admin approval.",
+  "ending": "Ending",
+  "threeMonthsTitle": "Three months free advertisement",
+  "threeMonthsDescription": "By publishing your advertisement before {limitDate} you are eligible for three months of free advertisement.",
+  "freePublicationTitle": "Lifetime free advertisement",
+  "freePublicationFailed": "If you want a lifetime free advertisement, please complete the following tasks:",
+  "freePublicationSuccess": "Parabéns! Ao escrever uma descrição de {wordsCount} palavras, fazer upload de {mediaCount} fotos e vídeos e selecionar {extraCount} serviços extras, você se qualifica para um anúncio gratuito vitalício.",
+  "fixDescription": "- You need to publish at least {minWords} words in your description, you are still missing {missingWords} words. You can review your description",
+  "fixMedia": "- You need to provide at least {minMedia} photos and videos, you are still missing {missingMedia} of them. You can review your media",
+  "fixExtra": "- You need to select at least {minExtra} extra services. You are still missing {missingExtra} of them. You can add more",
+  "here": "here",
+  "accept": "Publication Terms",
+  "acceptPubication": "By submitting this information you allow to publish the content on our website.",
+  "errorAccept": "You must accept the publication terms",
+  "publicationSaved": "Your advertisement has been saved. It now needs admin approval.",
+  "newPublication": "New adv",
+  "addNewPublication": "Add new adv",
+  "activeUntil": "Active until",
+  "deleteConfirm": "Do you really want to delete this publication?",
+  "cancel": "Cancel",
+  "confirm": "Confirm",
+  "registry": "Registration",
+  "name": "Name",
+  "name1": "Name first girl",
+  "name2": "Name second girl",
+  "indipendentOrAgency": "Indipendent or Agency",
+  "agency": "Agency",
+  "nationality": "Country of origin",
+  "nationality1": "Country of origin first girl",
+  "nationality2": "Country of origin second girl",
+  "area": "Area",
+  "selectArea": "Select your area",
+  "rate": "Hourly rate",
+  "services": "Services",
+  "selectServices": "Select offered services",
+  "body": "Figure",
+  "body1": "Figure first girl",
+  "body2": "Figure second girl",
+  "age": "Age",
+  "years": "years",
+  "height": "Height",
+  "breast": "Breast",
+  "waist": "Waist",
+  "hips": "Hips",
+  "height1": "Height first girl",
+  "breast1": "Breast first girl",
+  "waist1": "Waist first girl",
+  "hips1": "Hips first girl",
+  "height2": "Height second girl",
+  "breast2": "Breast second girl",
+  "waist2": "Waist second girl",
+  "hips2": "Hips second girl",
+  "extra": "Special services",
+  "kiss": "Kisses",
+  "couple": "Attention to couples",
+  "bdsm": "BDSM",
+  "rolePlay": "Role play games",
+  "threesome": "Threesomes",
+  "full": "Full",
+  "fantasy": "Fantasies",
+  "pornostar": "Pornostar experince",
+  "massage": "Relaxing massages",
+  "extraFreeWorning": "To get a free lifetime advertisement you still have to select {missingExtra} special services.",
+  "languages": "Languages",
+  "english": "English",
+  "spanish": "Spanish",
+  "portuguese": "Brazilian",
+  "basic": "Basic",
+  "intermediate": "Intermediate",
+  "advanced": "Advanced",
+  "native": "Native",
+  "selectLevel": "Select your level",
+  "availability": "Availability",
+  "fromDay": "From day",
+  "toDay": "To day",
+  "selectDay": "Select a day",
+  "monday": "Monday",
+  "tuesday": "Tuesday",
+  "wednesday": "Wednesday",
+  "thursday": "Thursday",
+  "friday": "Friday",
+  "saturday": "Saturday",
+  "sunday": "Sunday",
+  "fromHour": "From hour",
+  "toHour": "To hour",
+  "selectHour": "Select a time",
+  "nudeMessage": "Photos and video with nudity will be removed.",
+  "media": "Photos & Videos",
+  "blurPhoto": "Blur face on photos",
+  "videoNotBlurred": "Only images are blurred. Videos are not.",
+  "yes": "Yes",
+  "no": "No",
+  "bookSession": "Book a photo and video session",
+  "mediaFreeWorning": "To get a free lifetime advertisement you still miss {missingMedia} photos or videos.",
+  "type": "Advertisement type",
+  "individual": "Individual",
+  "duo": "Duo",
+  "searchEmojisInEnglish": "Search by emoji name",
+  "SmileysEmotion": "Smileys & Emotion",
+  "PeopleBody": "People & Body",
+  "AnimalsNature": "Animals & Nature",
+  "FoodDrink": "Food & Drink",
+  "TravelPlaces": "Travel & Places",
+  "Activities": "Activities",
+  "Objects": "Objects",
+  "Symbols": "Symbols",
+  "Flags": "Flags",
+  "removeBookmark": "Remove from favorites",
+  "addBookmark": "Add to favorites",
+  "bookmarksLimitReached": "You can't have more then 10 favorite escorts",
+  "aboutMe": "About me",
+  "showOriginal": "Show original",
+  "showTransaltion": "Show transaltion",
+  "swipeToBrowse": "Swipe to browse",
+  "indipendent": "Indipendent",
+  "fotoOf": "Photo of",
+  "videoOf": "Video of",
+  "noEscort": "No escort found",
+  "levelName": "{level} level",
+  "comments": "Comments",
+  "leaveYourComment": "Leave your comment",
+  "nameLabel": "Name",
+  "namePlaceholder": "Provide your name",
+  "contentLabel": "Comment",
+  "contentPlaceholder": "Write your comment.\nYou can add emoji using the icon on the right.",
+  "whatsappLabel": "Whatsapp",
+  "whatsappPlaceholder": "Verify your number",
+  "numberNotPublished": "Your number will not be published or saved",
+  "verifyPhone": "Send Verification Code",
+  "cancelForm": "Reset",
+  "codeLabel": "Code",
+  "codePlaceholder": "Provide de code received by whatsapp",
+  "submitComment": "Publish",
+  "resendCode": "Send New Code",
+  "whatsappServerNotConnected": "Whatsapp Server not conntected. Please try again later.",
+  "whatsappInvalidNumber": "Not a valid Whatsapp number",
+  "invalidWhatsappCode": "Invalid Whatsapp code",
+  "commentPublished": "Comment saved. It now needs admin approval.",
+  "call": "Call",
+  "gallery": "Gallery",
+  "tapToEnlarge": "Tap to enlarge",
+  "details": "Details",
+  "sendWhatsapp": "Send Whatsapp",
+  "agencies": "Agencies",
+  "areas": "Neighbourhoods and Cities",
+  "outcallOnly": "only outcall",
+  "pageNotFound": "This page could not be found",
+  "unauthorized": "Unauthorized",
+  "somethingWentWrong": "Something went wrong",
+  "backToTheHomePage": "Back to the home page",
+  "home": "Home page",
+  "history": "News",
+  "publish": "Publish",
+  "logout": "Logout",
+  "account": "Account",
+  "legal": "Legal",
+  "allRightReserved": "All rights reserved",
+  "publications": "Advertisements",
+  "payments": "Payments",
+  "ageMessage": "By law, we have to verify that you are at least 18 years old to publish your advertisemenet.",
+  "documentPrivacy": "Your information and your document will be never shared with anyone unless we will be asked by the authorities.",
+  "duration": "Duration",
+  "until": "Until",
+  "price": "Price",
+  "publication": "Advertisement",
+  "selectPublication": "Select advertisement",
+  "selectDuration": "Select duration",
+  "newPayment": "New payment",
+  "removePayment": "Delete payment",
+  "receiveDetailsByWa": "Receive details by whatsapp",
+  "markPaid": "Mark as paid",
+  "status": "State",
+  "pending": "Pending",
+  "booked": "Booked",
+  "paid": "Paid",
+  "received": "Received",
+  "approved": "Approved",
+  "reference": "Reference",
+  "month": "month",
+  "months": "months",
+  "oneMonthFree": "Enjoy a free month until February included!",
+  "photoSession": "The first payment includes a photo and video session with a glamour photographer!",
+  "paymentInstructions1": "In a few hours we will send you the data for the payment to your WhatsApp.",
+  "paymentInstructions2": "You can pay by bank transfer or cash deposit.",
+  "previous": "Previous",
+  "next": "Next",
+  "indipendents": "Indipendents",
+  "bookmarks": "Favorites",
+  "bookmarksDescription": "your favorites escorts",
+  "addBookmarksMessage1": "You don have any favorite escorts yet. You can add favorite to the list clicking on the",
+  "addBookmarksMessage2": "icon on the escort page.",
+  "published": "Published",
+  "viewAll": "View All",
+  "toc": "Table of content",
+  "forEscorts": "for escorts",
+  "forClients": "for clients",
+  "similarPosts": "Related Posts",
+  "heroTitle": "The web of the luxury escorts",
+  "heroSubtitle": "Publica tu anuncio an la pagina de las escort mas exitosa de Paraguay",
+  "whatAbout": "What is it about?",
+  "byNeighborhood": "Neighborhood",
+  "byPrice": "Price",
+  "byService": "Service",
+  "conventional": "Conventional",
+  "complete": "Complete",
+  "byActivity": "Activity",
+  "virtual": "Virtual Services",
+  "apartment": "Incall",
+  "hotel": "Outcall",
+  "dinner": "Dinners",
+  "travel": "Travels",
+  "filter": "Filter",
+  "removeFilter": "Remove Filters",
+  "PYG": "PYG",
+  "diamond": "Diamond",
+  "palladium": "Palladium",
+  "platinum": "Platinum",
+  "esmerald": "Emerald",
+  "gold": "Gold",
+  "instructions": "Instructions",
+  "updated": "Updated",
+  "loginDisabled": "Login temporarily disabled",
+  "scrollToTop": "Scroll to the top",
+  "contactUs": "Contact us",
+  "seo": {
+    "name": "🫦\uFE0F | Paraguay XP",
+    "tags": "Paraguay Escort. Py Escort",
+    "indexTitle": "Vip escorts in Paraguay",
+    "indexDescription": "Your best escorts in Paraguay and Asunción. High level companions for you",
+    "titleHistory": "New escorts Paraguay",
+    "descriptionHistory": "The latest added escorts in Paraguay",
+    "titleIndipendent": "Indipendent escorts",
+    "descriptionIndipendent": "Indipendent escort in Paraguay",
+    "titleAgency": "Escorts of {agency} agency",
+    "descriptionAgency": "Escorts provided by the agency {agency} in Paraguay for you",
+    "titleOutcallOnly": "Escorts outcall only",
+    "descriptionOutcallOnly": "Escorts for hotel visits in Paraguay",
+    "titleArea": "Escorts in {area}",
+    "descriptionNeighbourhood": "Escorts for incall in the {area} neighbourhood of Asunción",
+    "descriptionCity": "Escorts for incall in the {area} city of Paraguay",
+    "titleExtra": "Escorts with {extra} service",
+    "descriptionExtra": "Escorts that offer {extra} service in Paraguay",
+    "blogDescription": "The blog of the Paraguay escorts"
+  },
+  "jsonld": {
+    "indexKeywords": "escort paraguay, escort py, escort asunción, vip escort paraguay, companions paraguay, whores paraguay",
+    "headlineIndexClients": "What to expect from an escort in Paraguay and how to behave with her",  
+    "headlineIndexEscorts": "How to publish your escort advertisement on Paraguay XP",
+    "headlineExtra": "What is the {extra} service about and how to find it in Paraguay"
   }
 }
