--- a/lang/es.json
+++ b/lang/es.json
@@ -19,5 +19,281 @@
     "verifyCode": "Comprueba el código enviado a través de whatsapp",
     "magicLinkInstructions": "No se requiere contraseña.\n\nLe enviaremos un código para iniciar sesión por whatsapp.",
     "messageContent": "Su código de acceso es:"
+  },
+  "and": "y", 
+  "birthDate": "Fecha de nacimiento",
+  "uploadFrontId": "Subir cédula frontal",
+  "uploadBackId": "Subir cédula posterior",
+  "uploadSelfie": "Subir selfie",
+  "idFrontInput": "Cédula frontal",
+  "idBackInput": "Cédula posterior",
+  "selfieInput": "Selfie",
+  "birthDate1": "Fecha de nacimiento primera chica",
+  "uploadFrontId1": "Subir cédula frontal primera chica",
+  "uploadBackId1": "Subir cédula posterior primera chica",
+  "uploadSelfie1": "Subir selfie primera chica",
+  "idFrontInput1": "Cédula frontal primera chica",
+  "idBackInput1": "Cédula posterior primera chica",
+  "selfieInput1": "Selfie primera chica",
+  "birthDate2": "Fecha de nacimiento segunda chica",
+  "uploadFrontId2": "Subir cédula frontal segunda chica",
+  "uploadBackId2": "Subir cédula posterior segunda chica",
+  "uploadSelfie2": "Subir selfie segunda chica",
+  "idFrontInput2": "Cédula frontal segunda chica",
+  "idBackInput2": "Cédula posterior segunda chica",
+  "selfieInput2": "Seflie segunda chica",
+  "head": "Título",
+  "headPlaceholder": "Escribe tu título aquí",
+  "description": "Descripción",
+  "descriptionPlaceholder": "Escribe tu descripción aquí. Puede agregar emoji usando el ícono a la derecha.",
+  "descriptionFreeWorning": "Para aprovechar de una publicación gratis de por vida, aún te falta escibir {missingWords} palabras.",
+  "publicationDelated": "Su anuncio ha sido eliminado. Ahora necesita la aprobación del administrador.",
+  "ending": "Finalización",
+  "threeMonthsTitle": "Tres meses de publicación gratis",
+  "threeMonthsDescription": "Al publicar tu anuncio antes del {limitDate} tienes derecho a 3 meses de publicación gratis.",
+  "freePublicationTitle": "Publicación gratis de por vida",
+  "freePublicationFailed": "Si deseas publicar gratis de por vida, por favor completa las siguientes tareas:",
+  "freePublicationSuccess": "¡Felicidades! Al escribir una descripción de {wordsCount} palabras, cargar {mediaCount} fotos y videos y seleccionar {extraCount} servicios adicionales, es elegible para un anuncio gratuito de por vida.",
+  "fixDescription": "- Debes escribir al menos {minWords} palabras en tu descripción, aún te quedan {missingWords}. Puedes revisionar tu descripción",
+  "fixMedia": "- Debes proporcionar al menos {minMedia} fotos y videos, todavía te faltan {missingMedia}. Puedes agregar mas",
+  "fixExtra": "- Debes seleccionar al menos {minExtra} servicios adicionales. Aún te faltan {missingExtra}. Puedes agregar más",
+  "here": "aquí",
+  "accept": "Condiciones de publicación",
+  "acceptPubication": "Al enviar esta información, usted permite publicar el contenido en nuestra página web.",  
+  "errorAccept": "Debes aceptar las condiciones de publicación",
+  "publicationSaved": "Su anuncio ha sido guardado. Ahora necesita la aprobación del administrador.",
+  "newPublication": "Nuevo anuncio",
+  "addNewPublication": "Anadir nuevo anuncio", 
+  "activeUntil": "Activo hasta",
+  "deleteConfirm": "¿Realmente quieres eliminar esta publicación??",
+  "cancel": "Borrar",
+  "confirm": "Confirmar", 
+  "registry": "Registro",
+  "name": "Nombre",
+  "name1": "Nombre Primera Chica",
+  "name2": "Nombre Segunda Chica",
+  "indipendentOrAgency": "Independiente o Agencia",
+  "agency": "Agencia",
+  "nationality": "País de origen",
+  "nationality2": "País de origen segunda chica",
+  "area": "Barrio",
+  "selectArea": "Selecciona tu barrio",
+  "rate": "Tarifa oraria",
+  "services": "Servicios",
+  "selectServices": "Seleccione los servicios ofrecidos",
+  "body": "Figura",
+  "body1": "Figura primera chica",
+  "body2": "Figura segunda chica",
+  "age": "Edad",
+  "years": "años",
+  "height": "Estatura",
+  "breast": "Busto",
+  "waist": "Cintura",
+  "hips": "Caderas",
+  "height1": "Estatura primera chica",
+  "breast1": "Busto primera chica",
+  "waist1": "Cintura primera chica",
+  "hips1": "Caderas primera chica",  
+  "height2": "Estatura segunda chica",
+  "breast2": "Busto segunda chica",
+  "waist2": "Cintura segunda chica",
+  "hips2": "Caderas segunda chica", 
+  "extra": "Servicios especiales",
+  "kiss": "Besos reales",
+  "couple": "Atención a parejas",
+  "bdsm": "BDSM",
+  "rolePlay": "Cambio de roles",
+  "threesome": "Tríos",
+  "full": "Completo",
+  "fantasy": "Fantasías",
+  "pornostar": "Pornostar",
+  "massage": "Masajes relajantes",
+  "extraFreeWorning": "Para aprovechar de una publicación gratis de por vida, aún te falta seleccionar {missingExtra} servicios especiales.",
+  "languages": "Idiomas",
+  "english": "Inglés",
+  "spanish": "Español",
+  "portuguese": "Brasileño",
+  "basic": "Básico",
+  "intermediate": "Intermedio",
+  "advanced": "Avanzado",
+  "native": "Nativo",
+  "selectLevel": "Selecciona tu nivel",
+  "availability": "Disponibilidad",
+  "fromDay": "Desde el dia",
+  "toDay": "Hasta el dia",
+  "selectDay": "Seleccione un día",
+  "monday": "Lunes",
+  "tuesday": "Martes",
+  "wednesday": "Miércoles",
+  "thursday": "Jueves",
+  "friday": "Viernes",
+  "saturday": "Sábado",
+  "sunday": "Domingo",
+  "fromHour": "Desde la hora",
+  "toHour": "Hasta la hora",
+  "selectHour": "Seleccione una orario",
+  "nudeMessage": "Se eliminarán las fotos y videos con desnudos.",
+  "media": "Fotos y Videos",
+  "blurPhoto": "Ocultar rostro en fotos",
+  "videoNotBlurred": "Solo las imágenes están ocultadas. Los vídeos no.",
+  "yes": "Sí",
+  "no": "No",
+  "bookSession": "Reserva una sesión de foto y vídeo",
+  "mediaFreeWorning": "Para aprovechar de una publicación gratis de por vida, aún te falta cargar {missingMedia} fotos y videos.",
+  "type": "Tipo de anuncio",
+  "individual": "Individual",
+  "duo": "Duo",
+  "searchEmojisInEnglish": "Buscar emoji por nombre inglés",
+  "SmileysEmotion": "Emoticonos y Emociones",
+  "PeopleBody": "Personas y Cuerpo",
+  "AnimalsNature": "Animales y Naturaleza",
+  "FoodDrink": "Comida y Bebida",
+  "TravelPlaces": "Viajes y Lugares",
+  "Activities": "Actividades",
+  "Objects": "Objetos",
+  "Symbols": "Simbolos",
+  "Flags": "Banderas",
+  "emoveBookmark": "Quitar de favoritas",
+  "addBookmark": "Agregar a las favoritas",
+  "bookmarksLimitReached": "No puedes tener más de 10 acompañantes favoritas",
+  "aboutMe": "Sobre mi",
+  "showOriginal": "Mostrar original",
+  "showTransaltion": "Mostrar traducción",
+  "swipeToBrowse": "Deslizar para navegar",
+  "indipendent": "Independiente",
+  "fotoOf": "Foto de",
+  "videoOf": "Video de",
+  "noEscort": "No se encontró ninguna escort",
+  "levelName": "Nivel {level}",
+  "comments": "Comentarios",
+  "leaveYourComment": "Dejá tu comentario",
+  "nameLabel": "Nombre",
+  "namePlaceholder": "Proporcione tu nombre",
+  "contentLabel": "Comentario",
+  "contentPlaceholder": "Escribe tu comentario.\nPuede agregar emoji usando el ícono a la derecha.",
+  "whatsappLabel": "Whatsapp",
+  "whatsappPlaceholder": "Verifica tu número",
+  "numberNotPublished": "Tu número no será publicado ni guardado",
+  "verifyPhone": "Envíar código de verificación",
+  "cancelForm": "Reiniciar",
+  "codeLabel": "Código",
+  "codePlaceholder": "Proporcionar el código recibido por whatsapp",
+  "submitComment": "Publicar",
+  "resendCode": "Envíar nuevo código",
+  "whatsappServerNotConnected": "El servidor de Whatsapp no ​​está conectado. Por favor, inténtelo de nuevo más tarde.",
+  "whatsappInvalidNumber": "No es un número de Whatsapp válido",
+  "invalidWhatsappCode": "Código de Whatsapp no ​​válido",
+  "commentPublished": "Comentario guardado. Ahora necesita la aprobación del administrador.",
+  "call": "Llamar",
+  "gallery": "Galería",
+  "tapToEnlarge": "Toque para agrandar",
+  "details": "Detalles",
+  "sendWhatsapp": "Enviar Whatsapp",
+  "agencies": "Agencias",
+  "areas": "Barrios y Ciudades",
+  "outcallOnly": "solo salida",
+  "pageNotFound": "Esta página no se pudo encontrar",
+  "unauthorized": "No autorizado",
+  "somethingWentWrong": "Algo salió mal",
+  "backToTheHomePage": "Volver a la página de inicio",
+  "home": "Página de inicio",
+  "history": "Novedades",
+  "publish": "Publica",
+  "logout": "Cerrar sesión",
+  "account": "Cuenta",
+  "legal": "Legales",
+  "allRightReserved": "Todos los derechos reservados",
+  "publications": "Anuncios",
+  "payments": "Pagos",
+  "ageMessage": "Por ley, tenemos que verificar que tienes al menos 18 años para publicar tu anuncio.",
+  "documentPrivacy": "Su información y su documento nunca se compartirán con nadie a menos que las autoridades nos lo soliciten.",
+  "duration": "Duración",
+  "until": "Hasta",
+  "price": "Precio",
+  "publication": "Anuncio",
+  "selectPublication": "Seleccionar anuncio",
+  "selectDuration": "Seleccionar duración",
+  "newPayment": "Nuevo pago", 
+  "removePayment": "Borrar pago",
+  "receiveDetailsByWa": "Recibir detalles por whatsapp",
+  "markPaid": "Marcar como pagado", 
+  "status": "Estado",
+  "pending": "Pendiente",
+  "booked": "Reservado",
+  "paid": "Pagado",
+  "received": "Recibido",
+  "approved": "Aprobado", 
+  "reference": "Motivo de la transferencia", 
+  "month": "mes",
+  "months": "meses",
+  "oneMonthFree": "Disfruta de un mes gratis hasta febrero incluido!",
+  "photoSession": "El primer pago incluye una sesión de foto y video con un fotógrafo de glamour!",
+  "paymentInstructions1": "En unas horas te vamos a enviar a tu whatsapp los datos por el pago.",
+  "paymentInstructions2": "Puedes abonar con transferencia bancaria o deposito en efectivo.",
+  "previous": "Anterior",  
+  "next": "Siguiente",
+  "indipendents": "Independientes",
+  "bookmarks": "Favoritas",
+  "bookmarksDescription": "Tus escort favoritas",
+  "addBookmarksMessage1": "Todavía no tienes ningún acompañante favorita. Puede agregar favoritos a la lista haciendo clic en el ",
+  "addBookmarksMessage2": "icono en la página del acompañante.",
+  "published": "Publicado",
+  "viewAll": "Ver Todas",
+  "toc": "Tabla de contenidos",
+  "forEscorts": "para escort",
+  "forClients": "para clientes",
+  "similarPosts": "Artículos Relacionados",
+  "heroTitle": "La página de las escort exitosas",
+  "heroSubtitle": "Publica tu anuncio en la página de las escort mas atractiva de Paraguay",
+  "whatAbout": "¿De qué se trata?",
+  "byNeighborhood": "Ubicación",
+  "byPrice": "Precio",
+  "byService": "Servicio",
+  "conventional": "Convencional",
+  "complete": "Completo",
+  "byActivity": "Actividad",
+  "virtual": "Servicios Virtuales",
+  "apartment": "Depto Proprio",
+  "hotel": "Hotel, Motel y Domicilio",
+  "dinner": "Cenas",
+  "travel": "Viajes",
+  "filter": "Filtrar",
+  "removeFilter": "Eliminar Filtros",
+  "PYG": "Gs",
+  "diamond": "Diamante",
+  "palladium": "Paladio",
+  "platinum": "Platino",
+  "esmerald": "Esmeraldo",
+  "gold": "Oro",
+  "instructions": "Instrucciones",
+  "updated": "Actualizado",
+  "loginDisabled": "Inicio de sesión temporalmente deshabilitado",
+  "scrollToTop": "Desplácese hasta la parte superior",
+  "contactUs": "Contacta con nosotros",
+  "seo": {
+    "name": "🫦\uFE0F | Paraguay XP",
+    "tags": "Escort Paraguay. Escort Py",
+    "indexTitle": "Las mejores escort en Paraguay",
+    "indexDescription": "Tus acompañantes en Paraguay. Las mejores escorts de Asunción. Chicas compañía de alto nivel para ti",
+    "titleHistory": "Novedades escort Paraguay",
+    "descriptionHistory": "Las últimas novedades cerca las escort en Paraguay",
+    "titleIndipendent": "Escort indipendientes",
+    "descriptionIndipendent": "Escort y acompañantes indipendientes en Paraguay",
+    "titleAgency": "Escort agencia {agency}",
+    "descriptionAgency": "Escort y acompañantes de la agencia {agency} en Paraguay",
+    "titleOutcallOnly": "Escort solo salida",
+    "descriptionOutcallOnly": "Escort y acompañantes para salidas en hotel y moteles en Paraguay",
+    "titleArea": "Escort en {area}",
+    "descriptionNeighbourhood": "Escort y acompañantes con departmanento proprio en el barrio de {area} en Asunción",
+    "descriptionCity": "Escort y acompañantes con departmanento proprio en la ciudad de {area} en Paraguay",
+    "titleExtra": "Escort con servicio {extra}",
+    "descriptionExtra": "Escort y acompañantes que ofrecen el servicio de {extra} en Paraguay",
+    "blogDescription": "El blog de la escort y acompañantes en Paraguay"
+  },
+  "jsonld": {
+    "indexKeywords": "escort paraguay, escort py, scort paraguay, scort py, escort asunción, acompañantes en paraguay, scort en paraguay, zona roja, zona roja py, foro hot, zona roja.com.py, hot py, hot com py, skokka paraguay, putas paraguay, putas py, puta asuncion, pornos paraguaya",
+    "headlineIndexClients": "Qué esperar de una escort en Paraguay y cómo comportarse con ella",  
+    "headlineIndexEscorts": "Como publicar tu anuncio de escort en Paraguay XP",
+    "headlineExtra": "Qué es el servicio {extra} y cómo encontrarlo en Paraguay"
   }
 }
