--- a/lang/pt.json
+++ b/lang/pt.json
@@ -9,27 +9,34 @@
     "bookmarks": "Favoritas",
     "admin": "Gerente",
     "allRightReserved": "Todos os direitos reservados"
+  },
+  "index": {
+    "title": "Acompanhantes no Paraguai",
+    "description": "Seus melhores acompanhantes e escort no Paraguai e Assunção. Acompanhantes de alto nível para você",
+    "noEscort": "Nenhum acompanhante encontrada",
+    "levelName": "Nível {level}",
+    "PYG": "PYG"
   }, 
   "error": {
-    "pageNotFound": "Pagina non trovata",
-    "unauthorized": "Non autorizzato",
-    "unauthenticated": "Non autenticato",
-    "somethingWentWrong": "Qualcosa è andato storto",
-    "backToTheHomePage": "Tornare alla pagina principale",
-    "configuration": "Si è verificato un problema con la configurazione del server.\n\nPer ulteriori informazioni, controllare i registri del server.",
-    "accessDenied": "Non si dispone dell'autorizzazione per accedere.",
-    "verification": "Il codice di accesso non è più valido.\n\nPotrebbe essere già stato utilizzato o essere scaduto.",
-    "generic": "Error de inicio de sesión genérico."
+    "pageNotFound": "Página não encontrada",
+    "unauthorized": "Não autorizado",
+    "unauthenticated": "Não autenticado",
+    "somethingWentWrong": "Algo deu errado",
+    "backToTheHomePage": "Voltar à página principal",
+    "configuration": "Há um problema com a configuração do servidor.\n\nVerifique os logs do servidor para obter mais informações.",
+    "accessDenied": "Você não tem permissão para fazer login.",
+    "verification": "A senha não é mais válida.\n\nPode já ter sido usada ou expirado.",
+    "generic": "Falha no logon genérico."
   },
   "auth": {
     "logoutEmail": "Sair",
-    "loginPrefix": "Codice paese",
-    "loginNumber": "Accesso",
-    "loginCode": "Codice",
-    "sendWhatsapp": "Invia codice di accesso su whatsapp",
-    "verifyCode": "Verifica il codice inviato via whatsapp",
-    "magicLinkInstructions": "Non è richiesta alcuna password.\n\nTi invieremo un codice di accesso su whtsapp.",
-    "messageContent": "Il tuo codice di accesso è:"
+    "loginPrefix": "Código do país",
+    "loginNumber": "Acesso",
+    "loginCode": "Código",
+    "sendWhatsapp": "Enviar código de acesso no whatsapp",
+    "verifyCode": "Confira o código enviado via whatsapp",
+    "magicLinkInstructions": "Nenhuma senha é necessária.\n\nEnviaremos uma senha no whatsapp.",
+    "messageContent": "Seu código de acesso é:"
   },
   "and": "e",
   "birthDate": "Data de nascimento",
@@ -175,8 +182,6 @@
   "indipendent": "Independente",
   "fotoOf": "Foto de",
   "videoOf": "Vídeo de",
-  "noEscort": "Nenhum acompanhante encontrada",
-  "levelName": "Nível {level}",
   "comments": "Comentários",
   "leaveYourComment": "Deixe o seu comentário",
   "nameLabel": "Nome",
@@ -266,7 +271,6 @@
   "travel": "Viagens",
   "filter": "Filtro",
   "removeFilter": "Remover Filtros",
-  "PYG": "PYG",
   "diamond": "Diamante",
   "palladium": "Paládio",
   "platinum": "Platina",
@@ -280,8 +284,6 @@
   "seo": {
     "name": "🫦\uFE0F | Paraguay XP",
     "tags": "Acompanhantes Paraguai. Acompanhantes Py",
-    "indexTitle": "Acompanhantes no Paraguai",
-    "indexDescription": "Seus melhores acompanhantes e escort no Paraguai e Assunção. Acompanhantes de alto nível para você",
     "titleHistory": "Novidades acompanhantes Paraguai",
     "descriptionHistory": "Últimas novidades cerca las acompanhantes no Paraguai",
     "titleIndipendent": "Acompanhantes independentes",
